# main.go
@@ -3,10 +3,26 @@ package main
 import (
 	"fiber-go/app/routes"
 	"fiber-go/database"
+	_ "fiber-go/docs"
 
 	"github.com/gofiber/fiber/v2"
+	fiberSwagger "github.com/swaggo/fiber-swagger" // fiber-swagger middleware
 )
 
+// @title Swagger Example API
+// @version 1.0
+// @description This is a sample server Petstore server.
+// @termsOfService http://swagger.io/terms/
+
+// @contact.name API Support
+// @contact.url http://www.swagger.io/support
+// @contact.email support@swagger.io
+
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host petstore.swagger.io
+// @BasePath /v2
 func main() {
 	database.InitDB()
 	database.Conn()
@@ -19,14 +35,7 @@ func main() {
 		AppName:       "fiber-go v1.0.1",
 	})
 
-	// cfg := swagger.Config{
-	// 	BasePath: "/",
-	// 	FilePath: "./docs/swagger.json",
-	// 	Path:     "swagger",
-	// 	Title:    "Fiber API Docs",
-	// }
-
-	// app.Use(swagger.New(cfg))
+	app.Get("/swagger/*", fiberSwagger.WrapHandler)
 
 	app.Get("/", func(c *fiber.Ctx) error {
 		return c.SendString("Hello, World!")
